--- a/config_example.ini
+++ b/config_example.ini
@@ -2,6 +2,8 @@
 GROCY_URL = https://example.com
 GROCY_PORT = 443
 GROCY_API = YOUR_GROCY_API_KEY
+# GROCY_DEFAULT_QUANTITY_UNIT_ID 在 shell内获取:
+; curl -X 'GET' 'https://EXAMPLE.COM:PORT/api/objects/quantity_units' \  -H 'accept: application/json' \  -H 'GROCY-API-KEY:YOUR_GROCY_API_KEY' \  | echo -e "$(cat)"
 GROCY_DEFAULT_QUANTITY_UNIT_ID = 1  # 默认的数量单位ID
 GROCY_DEFAULT_BEST_BEFORE_DAYS = 365  # 默认的保质期天数
 
@@ -10,7 +12,7 @@ GROCY_DEFAULT_BEST_BEFORE_DAYS = 365  # 默认的保质期天数
 ; curl -X 'GET' 'https://EXAMPLE.COM:PORT/api/objects/locations' \
 ; -H 'accept: application/json' \
 ; -H 'GROCY-API-KEY:YOUR_GROCY_API_KEY' \
-; | echo -e "$(cat)"" 
+; | echo -e "$(cat)"
 [GrocyLocation]
 pantry = 1
 temporary_storage = 2
