fix(config): handle inline comment

--- a/config_example.ini
+++ b/config_example.ini
@@ -4,8 +4,10 @@ GROCY_PORT = 443
 GROCY_API = YOUR_GROCY_API_KEY
 # GROCY_DEFAULT_QUANTITY_UNIT_ID 在 shell内获取:
 ; curl -X 'GET' 'https://EXAMPLE.COM:PORT/api/objects/quantity_units' \  -H 'accept: application/json' \  -H 'GROCY-API-KEY:YOUR_GROCY_API_KEY' \  | echo -e "$(cat)"
-GROCY_DEFAULT_QUANTITY_UNIT_ID = 1  # 默认的数量单位ID
-GROCY_DEFAULT_BEST_BEFORE_DAYS = 365  # 默认的保质期天数
+; 默认的数量单位ID
+GROCY_DEFAULT_QUANTITY_UNIT_ID = 1
+; 默认的保质期天数
+GROCY_DEFAULT_BEST_BEFORE_DAYS = 365
 
 # 存储位置ID,与scanner.ino内的位置名称对应
 # shell内获取,替换以下地址\端口\api_key:
